# TargetTriple.py

./: .gitlab-ci.yml  ReadMe.md  setup.cfg
TargetTriple/: __init__.py
tests/: tests.py
