[metadata]
name = TargetTriple
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/TargetTriple.py
description = Represents a target triple.
long_description = file: ReadMe.md
keywords = package, location
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = TargetTriple
setup_requires = setuptools_scm;

